--- a/.config/i3/config
+++ b/.config/i3/config
@@ -2,7 +2,7 @@ include ~/.config/i3/workspaces
 include ~/.config/i3/unused
 include ~/.config/i3/commands
 include ~/.config/i3/swap
-#include ~/.config/i3/kdei3config
+include ~/.config/i3/mystuff
 focus_follows_mouse no
 
 # Things to always execute
@@ -47,8 +47,7 @@ bindsym Print exec --no-startup-id flameshot gui
 for_window [class="spectacle"] floating enable
 bindsym Shift+Print exec spectacle
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
+# Font
 font pango:monospace 0
 
 # Polybar
@@ -63,8 +62,8 @@ exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
 exec_always --no-startup-id pactl set-source-volume @DEFAULT_SOURCE@ 70%
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +4%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -4%
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle 
 #bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
 bindsym $mod+XF86AudioMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
@@ -90,26 +89,14 @@ bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 # Dmenu script for logout
 bindsym $mod+BackSpace exec $HOME/.config/i3/scripts/logoutmenu.sh
 
-# Start/Stop screen keybind
-bindsym $mod+F9 exec start-screen.sh
-bindsym $mod+F10 exec stop-screen.sh
-bindsym $mod+Mod1+F9 exec xset r rate 300 50
-
 # force and normal kill
 bindsym $mod+shift+q exec $HOME/.config/i3/scripts/killscript
 bindsym $mod+q kill
 
 # Launches apps
-bindsym $mod+t exec floorp
-bindsym $mod+y exec Discord
-bindsym $mod+Mod1+y exec spotify-launcher --skip-update
 bindsym $mod+comma exec nitrogen --head=2
 bindsym $mod+Mod1+comma exec nitrogen --head=1
-bindsym $mod+b exec notepadqq
-bindsym $mod+Mod1+b exec mousepad
-bindsym $mod+F8 exec killall OpenTabletDriver.Daemon & otd-daemon
 bindsym $mod+period exec plasma-emojier
-bindsym $mod+Ctrl+y exec deadbeef
 
 # Border
 default_border pixel 4
@@ -142,9 +129,3 @@ bindsym $mod+equal sticky toggle
 # Script for changing color scheme
 bindsym $mod+Ctrl+comma exec $HOME/.config/i3/scripts/theme
 
-# File managers
-bindsym $mod+Shift+e exec QT_QPA_PLATFORMTHEME=kde dolphin
-bindsym $mod+Mod1+e exec thunar
-
-# opentabletdriver
-bindsym $mod+Mod1+t exec otd-gui
