--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -49,9 +49,13 @@ separator = |
 separator-foreground = ${colors.disabled}
 
 font-0 = monospace;2
+font-1 = Noto Sans CJK JP;2
+#font-2 = Noto Color Emoji
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date systray
+modules-right = filesystem pulseaudio xkeyboard memory cpu wlan date systray
+modules-center = playerctl
+fixed-center = true
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -97,15 +101,18 @@ label-empty = %name%
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1
 
+reverse-scroll = true
+
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:80:...%
+label = %title:0:60:...%
 
 [module/filesystem]
 type = internal/fs
 interval = 25
 
 mount-0 = /
+;mount-1 = /home
 
 label-mounted = %{F#FCEFE3}%mountpoint%%{F-} %percentage_used%% used
 
@@ -162,10 +169,10 @@ inherit = network-base
 interface-type = wireless
 label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
 
-#[module/eth]
-#inherit = network-base
-#interface-type = wired
-#label-connected = %{F#f77b5c}%ifname%%{F-}
+[module/eth]
+inherit = network-base
+interface-type = wired
+label-connected = %{F#f77b5c}%ifname%%{F-}
 
 [module/date]
 type = internal/date
@@ -180,6 +187,15 @@ label-foreground = ${colors.primary}
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
+
+[module/playerctl]
+type = custom/script
+exec = ~/.config/polybar/scripts/playerthingy
+interval = 1
+
+click-left = playerctl play-pause
+scroll-up = playerctld unshift
+scroll-down = playerctld shift
 
 ; vim:ft=dosini
 
