--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -19,9 +19,9 @@
 [colors]
 background = #131426
 background-alt = #242B3D
-foreground = #7B79A2
-primary = #FCEFE3
-secondary = #FCEFE3
+foreground = #7DABEF
+primary = #C2EEFD
+secondary = #C2EEFD
 alert = #A54242
 disabled = #707880
 
@@ -49,13 +49,10 @@ separator = |
 separator-foreground = ${colors.disabled}
 
 font-0 = monospace;2
-font-1 = Noto Sans CJK JP;2
-#font-2 = Noto Color Emoji
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan date systray
+modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date systray
 modules-center = playerctl
-fixed-center = true
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -101,20 +98,17 @@ label-empty = %name%
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1
 
-reverse-scroll = true
-
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:60:...%
+label = %title:0:80:...%
 
 [module/filesystem]
 type = internal/fs
 interval = 25
 
 mount-0 = /
-;mount-1 = /home
 
-label-mounted = %{F#FCEFE3}%mountpoint%%{F-} %percentage_used%% used
+label-mounted = %{F#C2EEFD}%mountpoint%%{F-} %percentage_used%% used
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
@@ -169,10 +163,10 @@ inherit = network-base
 interface-type = wireless
 label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
 
-[module/eth]
-inherit = network-base
-interface-type = wired
-label-connected = %{F#f77b5c}%ifname%%{F-}
+#[module/eth]
+#inherit = network-base
+#interface-type = wired
+#label-connected = %{F#f77b5c}%ifname%%{F-}
 
 [module/date]
 type = internal/date
@@ -188,15 +182,9 @@ label-foreground = ${colors.primary}
 screenchange-reload = true
 pseudo-transparency = true
 
-[module/playerctl]
-type = custom/script
-exec = ~/.config/polybar/scripts/playerthingy
-interval = 1
-
-click-left = playerctl play-pause
-scroll-up = playerctld unshift
-scroll-down = playerctld shift
-
 ; vim:ft=dosini
 
-
+[module/playerctl]
+type =  custom/script
+exec = ~/.config/polybar/scripts/playerthingy
+interval = 1
