--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -49,6 +49,7 @@ separator = |
 separator-foreground = ${colors.disabled}
 
 font-0 = monospace;2
+font-1 = Noto Sans Mono CJK JP;2
 
 modules-left = xworkspaces xwindow
 modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date systray
@@ -100,7 +101,7 @@ label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:80:...%
+label = %title:0:60:...%
 
 [module/filesystem]
 type = internal/fs
