Added my mountable partitions and updated polybar for the playerctl script

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -19,9 +19,9 @@
 [colors]
 background = #131426
 background-alt = #242B3D
-foreground = #7DABEF
-primary = #C2EEFD
-secondary = #C2EEFD
+foreground = #D4D4D4
+primary = #FFFFFF
+secondary = #FFFFFF
 alert = #A54242
 disabled = #707880
 
@@ -109,7 +109,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#C2EEFD}%mountpoint%%{F-} %percentage_used%% used
+label-mounted = %{F#FFFFFF}%mountpoint%%{F-} %percentage_used%% used
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
@@ -189,3 +189,6 @@ pseudo-transparency = true
 type =  custom/script
 exec = ~/.config/polybar/scripts/playerthingy
 interval = 1
+scroll-up = playerctld unshift
+scroll-down = playerctld shift
+click-left = playerctl play-pause
