--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -174,7 +174,7 @@ type = internal/date
 interval = 1
 
 date = %I:%M%p
-date-alt = %m-%d-%Y %H:%M:%S
+date-alt = %m/%d/%Y %b/%a %H:%M:%S
 
 label = %date%
 label-foreground = ${colors.primary}
