--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -52,7 +52,7 @@ font-0 = monospace;2
 font-1 = Noto Sans Mono CJK JP;2
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date systray
+modules-right = pulseaudio xkeyboard memory cpu wlan eth date systray
 modules-center = playerctl
 
 cursor-click = pointer
