--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -35,7 +35,7 @@ radius = 6
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 3pt
+line-size = 2pt
 
 border-size = 4pt
 border-color = #00000000
@@ -45,14 +45,14 @@ padding-right = 2
 
 module-margin = 1
 
-separator = |
+separator = •
 separator-foreground = ${colors.disabled}
 
 font-0 = monospace;2
 font-1 = Noto Sans Mono CJK JP;2
 
 modules-left = xworkspaces xwindow
-modules-right = pulseaudio xkeyboard memory cpu wlan eth date systray
+modules-right = xkeyboard pulseaudio memory cpu wlan eth  date systray 
 modules-center = playerctl
 
 cursor-click = pointer
@@ -77,7 +77,7 @@ enable-ipc = true
 [module/systray]
 type = internal/tray
 
-format-margin = 8pt
+format-margin = 4pt
 tray-spacing = 16pt
 
 [module/xworkspaces]
@@ -86,7 +86,7 @@ type = internal/xworkspaces
 label-active = %name%
 label-active-background = ${colors.background-alt}
 label-active-underline= ${colors.primary}
-label-active-padding = 1
+label-active-padding = 2
 
 label-occupied = %name%
 label-occupied-padding = 1
@@ -174,7 +174,7 @@ type = internal/date
 interval = 1
 
 date = %I:%M%p
-date-alt = %m/%d/%Y %b/%a %H:%M:%S
+date-alt =%b/%a %m/%d/%y %H:%M:%S
 
 label = %date%
 label-foreground = ${colors.primary}
