--- a/.config/i3/config
+++ b/.config/i3/config
@@ -143,6 +143,7 @@ bindsym $mod+F1 exec "sh -c 'sleep 1;xset dpms force off'"
 
 # dunst history pop
 bindsym $mod+Mod1+h exec dunstctl history-pop
+bindsym $mod+Ctrl+h exec "terminator -e 'dunstctl history;read -n 1 -s -r'"
 
 # Function key buttons
 bindsym XF86Calculator exec gnome-calculator
