--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,4 +1,4 @@
-;==========================================================
+
 ;
 ;
 ;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
@@ -19,9 +19,9 @@
 [colors]
 background = #131426
 background-alt = #242B3D
-foreground = #E57255
-primary = #F2A686
-secondary = #F2A686
+foreground = #D4D4D4
+primary = #FFFFFF
+secondary = #FFFFFF
 alert = #A54242
 disabled = #707880
 
@@ -109,7 +109,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#F2A686}%mountpoint%%{F-} %percentage_used%% used
+label-mounted = %{F#FFFFFF}%mountpoint%%{F-} %percentage_used%% used
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
