Fixed lock in waybar, Minor Tweaks to niri

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -50,7 +50,7 @@
   "custom/lock": {
     "format": "󰍁",
     "tooltip": false,
-    "on-click": "$HOME/.config/waybar/scripts/swaylock.sh"
+    "on-click": "hyprlock"
   },
   "custom/reboot": {
     "format": "󰜉",
