Configured niri, i3 and hyprland and added chvt and fuzzel-emoji

--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -5,13 +5,13 @@ general {
 }
 
 listener {
-  timeout = 300
+  timeout = 600
   on-timeout = loginctl lock-session
-  on-resume = notify-send "Welcome back!"
+  on-resume = notify-send -a "Welcome back!" -u low "mrraoww"
 }
 
 listener {
-  timeout = 300
+  timeout = 615
   on-timeout = niri msg action power-off-monitors
   on-resume = niri msg action power-on-monitors
 }
