Hyprland and a bunch more stuff

--- a/.config/fuzzel/fuzzel.ini
+++ b/.config/fuzzel/fuzzel.ini
@@ -1,12 +1,41 @@
+font=JetBrains Mono NF:size=17
+terminal=foot -e
+prompt="> "
+layer=overlay
+lines=15
+width=60
+dpi-aware=no
+inner-pad=10
+horizontal-pad=40
+vertical-pad=15
+match-counter=yes
+
 [colors]
-background=1e1e2edd
-text=cdd6f4ff
-prompt=bac2deff
-placeholder=7f849cff
-input=cdd6f4ff
-match=89b4faff
-selection=585b70ff
-selection-text=cdd6f4ff
-selection-match=89b4faff
-counter=7f849cff
-border=89b4faff
+background=282c34dd
+text=abb2bfdd
+prompt=d19a66ff
+placeholder=666e7cff
+input=abb2bfff
+match=be5046ff
+selection=d19a6687
+selection-text=abb2bfff
+selection-match=be5046ff
+counter=666e7cff
+border=d19a6677
+
+[border]
+radius=10
+width=2
+
+[colors]
+background=0f1416dd
+text=dee3e6dd
+prompt=87d1eaff
+placeholder=899296ff
+input=dee3e6ff
+match=c2c4ebff
+selection=87d1ea87
+selection-text=dee3e6ff
+selection-match=c2c4ebff
+counter=899296ff
+border=87d1ea77
