--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -7,11 +7,11 @@ general {
 listener {
   timeout = 600
   on-timeout = loginctl lock-session
-  on-resume = notify-send -a "Welcome back!" -u low "mrraoww"
+  on-resume = notify-send -u low -i ~/.icons/arona.ico "Welcome Back!"
 }
 
 listener {
   timeout = 615
-  on-timeout = niri msg action power-off-monitors
-  on-resume = niri msg action power-on-monitors
+  on-timeout = hyprctl dispatch dpms off #niri msg action power-off-monitors
+  on-resume = hyprctl dispatch dpms on #niri msg action power-on-monitors
 }
