--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -37,13 +37,13 @@ foreground = ${colors.foreground}
 
 line-size = 2pt
 
-border-size = 4pt
+border-size = 8pt
 border-color = #00000000
 
-padding-left = 2
-padding-right = 2
+padding-left = 1
+padding-right = 1
 
-module-margin = 1
+module-margin = 5px
 
 separator = •
 separator-foreground = ${colors.disabled}
@@ -78,7 +78,7 @@ enable-ipc = true
 type = internal/tray
 
 format-margin = 4pt
-tray-spacing = 16pt
+tray-spacing = 6pt
 
 [module/xworkspaces]
 type = internal/xworkspaces
