i3 reconfiguration and better polybar implementation with i3 module

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -19,14 +19,15 @@
 [colors]
 background = #131426
 background-alt = #242B3D
-foreground = #D4D4D4
-primary = #FFFFFF
-secondary = #FFFFFF
+foreground = #7DABEF
+primary = #C2EEFD
+secondary = #C2EEFD
 alert = #A54242
 disabled = #707880
 
 [bar/example]
 width = 100%
+monitor = ${env:MONITOR:}${env:MONITOR:}
 height = 23pt
 radius = 6
 
@@ -51,7 +52,7 @@ separator-foreground = ${colors.disabled}
 font-0 = monospace;2
 font-1 = Noto Sans Mono CJK JP;2
 
-modules-left = xworkspaces xwindow
+modules-left = i3 xwindow
 modules-right = xkeyboard pulseaudio memory cpu wlan eth  date systray 
 modules-center = playerctl
 
@@ -109,7 +110,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#FFFFFF}%mountpoint%%{F-} %percentage_used%% used
+label-mounted = %{F#C2EEFD}%mountpoint%%{F-} %percentage_used%% used
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
@@ -192,3 +193,31 @@ interval = 1
 scroll-up = playerctld unshift
 scroll-down = playerctld shift
 click-left = playerctl play-pause
+
+[module/i3]
+type = internal/i3
+pin-workspaces = true
+
+
+
+label-mode = %mode%
+label-mode-padding = 2
+label-mode-background = ${colors.alert}
+
+label-focused = %name%
+label-focused-background = ${colors.background-alt}
+label-focused-underline= ${colors.primary}
+label-focused-padding = 2
+
+label-visible = %name%
+label-visible-underline = ${colors.disabled}
+label-visible-padding = 2
+
+label-urgent = %name%
+label-urgent-underline = ${colors.alert}
+
+label-urgent-padding = 2
+
+label-unfocused = %name%
+label-unfocused-foreground = ${colors.disabled}
+label-unfocused-padding = 1
