--- a/.config/i3/config
+++ b/.config/i3/config
@@ -15,11 +15,11 @@ exec_always nitrogen --restore
 exec_always playerctld daemon
 exec_always /usr/lib/polkit-kde-authentication-agent-1
 exec_always nm-applet
-exec_always obs --startreplaybuffer --minimize-to-tray --disable-shutdown-check
+exec obs --startreplaybuffer --minimize-to-tray --disable-shutdown-check
 
 # Sets variables
 set $mod Mod4
-set $lock i3lock --bar-indicator -B 5 --bar-direction=2 --bar-pos 500 --bar-count 200 --bar-max-height 50 --bar-periodic-step 25 --bar-color D4D4D4 -k --keyhl-color=FFFFFF --time-font "Cute Cat" --time-pos="70:510" --bar-base-width 40 --date-color=FFFFFF --date-font "Cute Cat" --date-align 1 --time-align 1 --greeter-text="System Locked" --greeter-font "Cute Cat" --greeter-color=FFFFFF --greeter-pos="920:460" --ringver-color=FFFFFF -p default -e --verif-font "Cute Cat" --wrong-font "Cute Cat" --ind-pos="920:510" --wrong-color=FFFFFF
+set $lock i3lock --bar-indicator -B 5 --bar-direction=2 --bar-pos 500 --bar-count 200 --bar-max-height 50 --bar-periodic-step 25 --bar-color 7DABEF -k --keyhl-color=C2EEFD --time-font "Cute Cat" --time-pos="70:510" --bar-base-width 40 --date-color=C2EEFD --date-font "Cute Cat" --date-align 1 --time-align 1 --greeter-text="System Locked" --greeter-font "Cute Cat" --greeter-color=C2EEFD --greeter-pos="920:460" --ringver-color=C2EEFD -p default -e --verif-font "Cute Cat" --wrong-font "Cute Cat" --ind-pos="920:510" --wrong-color=C2EEFD
 bindsym $Mod+F12 exec xtrlock
 
 # Pavucontrol for managing audio
@@ -47,7 +47,7 @@ bindsym $Mod+Shift+F11 exec picom --no-vsync
 bindsym $Mod+Mod1+F11 exec killall picom
 
 # Flameshot And spectacle for screenshots
-exec_always --no-startup-id flameshot
+#exec --no-startup-id flameshot
 bindsym Print exec --no-startup-id flameshot gui
 
 for_window [class="spectacle"] floating enable
@@ -58,9 +58,9 @@ bindsym Shift+Print exec spectacle
 font pango:monospace 0
 
 # Polybar
-exec --no-startup-id polybar
+exec --no-startup-id $HOME/.config/polybar/launch.sh
 bindsym $mod+m exec killall polybar
-bindsym $mod+Mod1+m exec polybar
+bindsym $mod+Mod1+m exec $HOME/.config/polybar/launch.sh
 
 # Stuff
 exec --no-startup-id dex --autostart --environment i3
@@ -128,7 +128,7 @@ bindsym $mod+Mod1+S scratchpad show
 
 # Border
 # Class 	border	background	text	indicator	child_border
-client.focused	#D4D4D4	#D4D4D4		#FFFFFF	#FFFFFF		#D4D4D4
+client.focused	#7DABEF	#7DABEF		#C2EEFD	#C2EEFD		#7DABEF
 
 # Script for powercontrol
 bindsym $mod+slash exec $HOME/.config/i3/scripts/powercontrol.sh
