--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -19,9 +19,9 @@
 [colors]
 background = #131426
 background-alt = #242B3D
-foreground = #7DABEF
-primary = #C2EEFD
-secondary = #C2EEFD
+foreground = #EACD4C
+primary = #F9F5BB
+secondary = #F9F5BB
 alert = #A54242
 disabled = #707880
 
@@ -110,7 +110,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#C2EEFD}%mountpoint%%{F-} %percentage_used%% used
+label-mounted = %{F#F9F5BB}%mountpoint%%{F-} %percentage_used%% used
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
