--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .config/i3/scripts/mountscript
 .config/i3/scripts/umountscript
 .config/i3/mystuff
+.config/niri/scripts/mountscript
+.config/niri/scripts/umountscript
