--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -120,7 +120,9 @@ rules = (
 	{ match = "window_type *= 'dock' || window_type *= 'notification' || window_type *= 'desktop'"; shadow = false; blur-background = false },
 	{ match = "fullscreen"; corner-radius = 0; blur-background = false; shadow = false },
 	{ match = "window_type = 'normal' && focused = false && class_i != 'i3lock' && !I3_FLOATING_WINDOW@:c"; opacity = 0.9 },
-	{ match = "I3_FLOATING_WINDOW@:c && focused = false && class_i != 'pureRef'"; opacity = 0.3; blur-background = false },
+	{ match = "I3_FLOATING_WINDOW@:c"; blur-background = false },
+	{ match = "I3_FLOATING_WINDOW@:c && _NET_WM_STATE@:32a !*= '_NET_WM_STATE_STICKY' && focused = false && class_i != 'pureRef'"; opacity = 0.3 },
+	{ match = "_NET_WM_STATE@:32a *= '_NET_WM_STATE_STICKY' && focused = false"; opacity = 0.8 },
 	{ match = "window_type = 'normal' && class_i !*= 'dmenu' && window_type != 'tooltip' && window_type != 'popup_menu'";
 		animations = (
 			{
