--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -51,6 +51,8 @@ separator-foreground = ${colors.disabled}
 
 font-0 = monospace;2
 font-1 = Noto Sans Mono CJK JP;2
+font-2 = Noto Color Emoji:scale=10;2
+font-3 = Noto Sans Bengali UI:style=Regular;2
 
 modules-left = i3 xwindow
 modules-right = xkeyboard pulseaudio memory cpu wlan eth  date systray 
